# music_organizer

./: .gitignore  README.md  build_linux.sh  music_organizer.py  pyproject.toml  requirements.txt  setup_environment.sh  tagger.py
music_organizer/: __init__.py  cli.py  duplicates.py  metadata.py  organizer.py  utils.py
src/: BANNER.txt  __init__.py  __main__.py  cli.py  duplicates.py  metadata.py  organizer.py  playlists.py  utils.py
tests/: test_metadata.py  test_music_organizer.py  test_utils.py
